<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:background="#EEEEEE">


    <TextView
        android:id="@+id/reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:letterSpacing=".07"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="36dp"
        android:singleLine="true"
        android:background="@drawable/rect"
        android:elevation="10dp"
        android:fontFamily="@font/poppinsmedium"
        android:gravity="center"
        android:hint="@string/nickname"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg" />

    <EditText
        android:id="@+id/fullname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:singleLine="true"
        android:background="@drawable/rect"
        android:gravity="center"
        android:hint="@string/full_name"
        android:textColorHint="@color/black"
        android:fontFamily="@font/poppinsmedium"
        android:textColor="@color/black"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nickname" />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/rect"
        android:singleLine="true"
        android:gravity="center"
        android:hint="@string/username"
        android:textColorHint="@color/black"
        android:fontFamily="@font/poppinsmedium"
        android:textColor="@color/black"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullname" />

    <EditText
        android:id="@+id/pinnumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/rect"
        android:gravity="center"
        android:singleLine="true"
        android:hint="@string/pin_number"
        android:textColorHint="@color/black"
        android:inputType="textPassword"
        android:fontFamily="@font/poppinsmedium"
        android:textColor="@color/black"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <EditText
        android:id="@+id/mobilenumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/rect"
        android:gravity="center"
        android:hint="@string/mobile_number"
        android:inputType="number"
        android:textColorHint="@color/black"
        android:singleLine="true"
        android:fontFamily="@font/poppinsmedium"
        android:textColor="@color/black"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pinnumber" />

    <EditText
        android:id="@+id/upiId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/rect"
        android:gravity="center"
        android:hint="@string/upi_id"
        android:textColorHint="@color/black"
        android:fontFamily="@font/poppinsmedium"
        android:textColor="@color/black"
        android:singleLine="true"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mobilenumber" />

    <Button
        android:id="@+id/registerrbtn"
        android:layout_width="157dp"
        android:layout_height="43dp"
        android:layout_gravity="center"
        android:background="@drawable/rectcolor"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/register"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upiId" />

    <ImageView
        android:layout_width="178dp"
        android:layout_height="149dp"
        android:background="@drawable/backgroud1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>