<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".TransferMoney"
    android:background="@color/gray">


    <ImageView
        android:layout_width="178dp"
        android:layout_height="149dp"
        android:background="@drawable/backgroud1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/searchbox"
        android:layout_width="369dp"
        android:layout_height="57dp"
        android:layout_marginTop="172dp"
        android:background="@drawable/rectangle"
        android:elevation="20dp"
        android:fontFamily="@font/poppinsmedium"
        android:gravity="center"
        android:hint="@string/pay_by_name_or_phone_number"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="14dp"
        android:elevation="20dp"
        android:src="@drawable/search"
        app:layout_constraintBottom_toBottomOf="@+id/searchbox"
        app:layout_constraintEnd_toEndOf="@+id/searchbox"
        app:layout_constraintTop_toTopOf="@+id/searchbox"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/amount"
        android:layout_width="298dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:background="@drawable/rectangle2"
        android:fontFamily="@font/poppinsmedium"
        android:gravity="center"
        android:elevation="10dp"
        android:hint="@string/amount"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reciver" />

    <EditText
        android:id="@+id/reciver"
        android:layout_width="298dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:background="@drawable/rectangle2"
        android:fontFamily="@font/poppinsmedium"
        android:gravity="center"
        android:elevation="10dp"
        android:hint="@string/receiver_s_nick_name"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pinnumber" />

    <EditText
        android:id="@+id/pinnumber"
        android:layout_width="298dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@drawable/rectangle2"
        android:elevation="10dp"
        android:fontFamily="@font/poppinsmedium"
        android:gravity="center"
        android:hint="@string/pin"
        android:inputType="textPassword"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchbox" />

    <Button
        android:id="@+id/transfer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="72dp"
        android:background="@drawable/rectangle"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/transfer"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amount" />


</androidx.constraintlayout.widget.ConstraintLayout>