<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".Login">

    <TextView
        android:id="@+id/vooice"
        android:layout_width="164dp"
        android:layout_height="46dp"
        android:layout_gravity="center"
        android:layout_marginTop="152dp"
        android:fontFamily="@font/poppinsmedium"
        android:gravity="center"
        android:letterSpacing=".07"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsmedium"
        android:letterSpacing="0.1"
        android:text="@string/nickname"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/userinput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/userinput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="56dp"
        android:background="@drawable/rect"
        android:elevation="10dp"
        android:gravity="center"
        android:hint="@string/user_nickname"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vooice" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinsmedium"
        android:letterSpacing="0.1"
        android:text="@string/pin_number"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/pininput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.127"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/pininput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="textPassword"
        android:layout_marginTop="40dp"
        android:background="@drawable/rect"
        android:elevation="10dp"
        android:singleLine="true"
        android:gravity="center"
        android:hint="@string/pin_number"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userinput"
        tools:ignore="MissingConstraints" />


    <Button
        android:id="@+id/registerrbtn"
        android:layout_width="150dp"
        android:layout_height="39.03dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/rectcolor"
        android:elevation="50dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginbtn"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/or"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/registerrbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginbtn"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="150dp"
        android:layout_height="39.03dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/rectcolor"
        android:elevation="50dp"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pininput" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/loginbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pininput"
        app:layout_constraintVertical_bias="0.272" />

    <Button
        android:id="@+id/micBtnlogin"
        android:layout_width="135dp"
        android:layout_height="130dp"
        android:layout_centerInParent="true"
        android:background="@drawable/mic"
        android:fontFamily="@font/poppinsmedium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <ImageView
        android:layout_width="178dp"
        android:layout_height="149dp"
        android:background="@drawable/backgroud1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>